# learning-rust

./: README.md
notes/: Project1  Project2  general_notes.md  notes
src/01/: main  main.rs
src/04/variables/: Cargo.toml
src/05/functions/: Cargo.toml
src/06/ownership/: Cargo.toml
src/07/reference_and_borrowing/: Cargo.toml
src/08/modules/: Cargo.toml
src/09/fibonnaci/: Cargo.toml
src/10/structs/: Cargo.toml
src/11/error_handling/: Cargo.toml
src/12/threads/: Cargo.toml
src/13/mutex/: Cargo.toml
src/14/closures/: Cargo.toml
src/15/benchmark/: Cargo.toml
src/16/fibonacci/: Cargo.toml
src/17/pointers/: Cargo.toml
src/18/array_sum/: Cargo.toml
src/19/mutability/: Cargo.toml
src/2/hello_cargo/: Cargo.toml
src/20/producer_consumer/: Cargo.toml
src/21/philosophers/: Cargo.toml
src/22/copy/: Cargo.toml
src/23/rocket_preparation/: Cargo.toml
src/24/condvar/: Cargo.toml
src/25/barbershop/: Cargo.toml
src/26/actix_hello_world/: Cargo.toml  Dockerfile
src/27/search-insert-delete/: Cargo.toml
src/28/hello_rayon/: Cargo.toml
src/29/iterators/: Cargo.toml
src/3/guessing_game/: Cargo.toml
src/kv_store/kv_store/: Cargo.toml  Dockerfile  README.md  load_testing.yaml
src/kv_store/kv_store/k8s/: kvstore-deployment-service-1.0.yaml  kvstore-deployment-service-2.0.yaml  kvstore-deployment-service-v1.yaml
src/kv_store/kv_store/k8s/istio/: kvstore-istio-1.0.yaml  kvstore-istio-2.0.yaml  kvstore-istio-destinationrule-1.0.yaml  kvstore-istio-destinationrule-2.0.yaml
src/kv_store/kv_store/src/: main.rs  tests.rs
src/kv_store/kv_store/src/db/: memory.rs
src/notes_service/notes/: Cargo.toml  Dockerfile  Makefile  drill-benchmark.yaml
src/notes_service/notes/migrations/2019-10-14-182136_create_notes/: up.sql
src/notes_service/notes/src/: api.rs  db.rs  main.rs  model.rs  schema.rs  tests.rs
(+77 files in other folders)
