[package]
name = "kv_store"
version = "0.1.0"
authors = ["Sinval Vieira <sinvalneto01@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
drill 0.5.0

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
