[package]
name = "notes"
version = "0.1.0"
authors = ["Sinval Vieira <sinvalneto01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
serde = "1.0.101"
dotenv = "0.13.0"
env_logger = "0.5.10"
log = "0.4.3"


[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.3.2"