[package]
name = "notes"
version = "0.1.0"
authors = ["Sinval Vieira <sinvalneto01@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
actix-service = "0.4.2"
serde = "1.0.101"
serde_derive = "1.0.69"
dotenv = "0.13.0"
env_logger = "0.5.10"
log = "0.4.3"
bytes = "0.4.12"
serde_json = "1.0.41"
rand = "0.7.2"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.4.6"